modif simple page home avec liens vers diff. onglets dont campaigns

--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -3,7 +3,6 @@
 <html>
 <head>
   <title>Home</title>
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 <body>
 
@@ -11,11 +10,18 @@
   <h1>Home</h1>
   <p>Connected as {{ request.user.email }}</p>
 
+  <p><a href="{% url 'campaigns:template_list' %}">Simuler une campagne</a></p>
+  <p><a href="{% url 'campaigns:template_list' %}">Rechercher des plasmides</a></p>
+  <p><a href="{% url 'campaigns:template_list' %}">Templates publiques</a></p>
+
+
+  
   <form method="post" action="{% url 'accounts:logout' %}">
     {% csrf_token %}
     <button type="submit">Logout</button>
   </form>
 </main>
+
 
 </body>
 </html>
