--- a/apps/campaigns/templates/campaigns/template_list.html
+++ b/apps/campaigns/templates/campaigns/template_list.html
@@ -151,7 +151,7 @@
              data-template-type="{{ t.template_type }}"
              data-enzyme="{{ t.restriction_enzyme }}"
              data-separator="{{ t.separator }}"
-             data-created="{{ t.created_at|date:'d/m/Y - H:i' }}"
+             data-created="{{ t.created_at|date:'d/m/Y - g:i A' }}"
              data-owner="{% if t.owner.first_name %}{{ t.owner.first_name }} {{ t.owner.last_name }}{% else %}{{ t.owner.username }}{% endif %}"             data-is-public="{{ t.is_public|yesno:'Yes,No' }}"
              onclick="showTemplateInfo(event, this)">ℹ️</a>
           
