--- a/apps/simulations/templates/simulations/simu.html
+++ b/apps/simulations/templates/simulations/simu.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h1>Simulations</h1>
-<p>Page simulations (maquette).</p>
+<p>TO DO: Cette page sera un formulaire qui permettra ensuite de s'occuper des simulations de campagnes.</p>
 {% endblock %}
