--- a/apps/teams/templates/teams/teams.html
+++ b/apps/teams/templates/teams/teams.html
@@ -5,9 +5,7 @@
 {% block content %}
 <h1>Your teams</h1>
 
-<a class="btn" href="{% url 'teams:create' %}">Create a team</a>
-
-
+<br><a class="btn" href="{% url 'teams:create' %}">Create a team</a><br><br>
 
 {% if teams %}
   <ul>
