--- a/apps/campaigns/templates/campaigns/template_list.html
+++ b/apps/campaigns/templates/campaigns/template_list.html
@@ -20,15 +20,10 @@
   <p>No public templates available.</p>
 {% endif %}
 
+
+<h2>Your templates</h2>
+
 {% if user_templates %}
-  <h2>Your templates</h2>
-
-  {% if messages %}
-    {% for message in messages %}
-      <div class="message {{ message.tags }}">{{ message }}</div>
-    {% endfor %}
-  {% endif %}
-
   <ul>
     {% for t in user_templates %}
       <li>
@@ -51,6 +46,9 @@
       </li>
     {% endfor %}
   </ul>
+
+{% else %}
+  <p>No templates yet.</p>
 {% endif %}
 
 <p><a href="{% url 'campaigns:create_template' %}">Create a new template</a></p>
