--- a/apps/plasmids/templates/plasmids/search.html
+++ b/apps/plasmids/templates/plasmids/search.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% block title %}Plasmids{% endblock %}
 {% block content %}
-<h1>Plasmids</h1>
-<p>Maquette.</p>
+<h1>Plasmid Search</h1>
+<p>TO DO: Cette page contiendra un formulaire pour la recherche des plasmides.</p>
 {% endblock %}
