--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -30,6 +30,11 @@
       {% if request.user.is_staff %}
         <a href="{% url 'core:admin_dashboard' %}">Admin</a>
       {% endif %}
+
+      {% if user.is_authenticated %}
+        <a href="{% url 'accounts:profile' %}">Profile</a>
+      {% endif %}
+
   
     </nav>
     
