--- a/apps/core/templates/core/admin_page.html
+++ b/apps/core/templates/core/admin_page.html
@@ -9,7 +9,9 @@
 
 <h2>Accès</h2>
 <ul>
-  <li><a href="{% url 'admin:index' %}">Admin Django</a></li>
+  {% if user.is_superuser %}
+    <li><a href="{% url 'admin:index' %}">Admin Django</a></li>
+  {% endif %}
 </ul>
 
 <h2>Gestion</h2>
