transfer team property,  membership roles, ownership rules, admin and migrations

--- a/apps/teams/templates/teams/team_detail.html
+++ b/apps/teams/templates/teams/team_detail.html
@@ -7,12 +7,15 @@
 
 <h2>Members</h2>
 <ul>
-  {% for m in team.members.all %}
+  {% for membership in memberships %}
     <li>
-      {{ m.email }}
-      {% if user.id == team.owner_id and m.id != team.owner_id %}
-        <form method="post" action="{% url 'teams:remove_member' team.id m.id %}" style="display:inline;">
+      {{ membership.user.email }}
+      {% if is_owner and membership.user.id != team.owner_id %}
+        <form method="post"
+              action="{% url 'teams:remove_member' team.id %}"
+              style="display:inline;">
           {% csrf_token %}
+          <input type="hidden" name="user_id" value="{{ membership.user.id }}">
           <button type="submit">Remove</button>
         </form>
       {% endif %}
@@ -20,12 +23,19 @@
   {% endfor %}
 </ul>
 
-{% if user.id == team.owner_id %}
+{% if is_owner %}
   <h2>Add member</h2>
-  <form method="post">
+  <form method="post" action="{% url 'teams:add_member' team.id %}">
     {% csrf_token %}
-    {{ add_form.as_p }}
+    {{ add_member_form.as_p }}
     <button type="submit">Add</button>
+  </form>
+
+  <h2>Transfer ownership</h2>
+  <form method="post" action="{% url 'teams:transfer_owner' team.id %}">
+    {% csrf_token %}
+    {{ transfer_owner_form.as_p }}
+    <button type="submit">Transfer</button>
   </form>
 {% endif %}
 {% endblock %}
