--- a/apps/core/templates/core/admin_page.html
+++ b/apps/core/templates/core/admin_page.html
@@ -5,26 +5,35 @@
 {% block content %}
 <h1>Administration</h1>
 
-<p>Dashboard admin.</p>
+{% if user.is_authenticated %}
+  <p>Dashboard admin.</p>
 
-<h2>Accès</h2>
-<ul>
   {% if user.is_superuser %}
-    <li><a href="{% url 'admin:index' %}">Admin Django</a></li>
+    <h2>Accès</h2>
+    <ul>
+      <li><a href="{% url 'admin:index' %}">Admin Django</a></li>
+    </ul>
   {% endif %}
-</ul>
 
-<h2>Gestion</h2>
-<ul>
-  <li><a href="{% url 'campaigns:template_list' %}">Templates</a></li>
-  <li><a href="{% url 'teams:teams' %}">Équipes</a></li>
-  <li><a href="{% url 'simulations:simu' %}">Simulations</a></li>
-</ul>
+  {% if user.is_staff or user.is_superuser %}
+    <h2>Gestion</h2>
+    <ul>
+      <li><a href="{% url 'campaigns:template_list' %}">Templates</a></li>
+      <li><a href="{% url 'teams:teams' %}">Équipes</a></li>
+      <li><a href="{% url 'simulations:simu' %}">Simulations</a></li>
+    </ul>
+  {% endif %}
 
-<h2>Statistiques</h2>
-<ul>
-  <li>Utilisateurs : {{ user_count }}</li>
-  <li>Templates : {{ template_count }}</li>
-  <li>Simulations : {{ simulation_count }}</li>
-</ul>
+  {% if user.is_superuser %}
+    <h2>Statistiques</h2>
+    <ul>
+      <li>Utilisateurs : {{ user_count|default:"0" }}</li>
+      <li>Templates : {{ template_count|default:"0" }}</li>
+      <li>Simulations : {{ simulation_count|default:"0" }}</li>
+    </ul>
+  {% endif %}
+
+{% else %}
+  <p>Vous devez être connecté pour accéder à cette page.</p>
+{% endif %}
 {% endblock %}
