--- a/static/css/site.css
+++ b/static/css/site.css
@@ -159,3 +159,15 @@ footer{
     font-size:13px;
     color:var(--muted);
 }
+
+/* .page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.page-header h1 {
+    margin: 0;
+} */
+
+
