render "correspondence table" and "correspondence entries"

--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -13,5 +13,6 @@
   <li><a href="{% url 'plasmids:plasmid_list' %}">Plasmid List</a></li>
   <li><a href="{% url 'plasmids:search' %}">Browse plasmids</a></li>
   <li><a href="{% url 'teams:teams' %}">Teams</a></li>
+  <li><a href="{% url 'correspondences:list' %}">My correspondence Table</a></li>
 </ul>
 {% endblock %}
