--- a/apps/correspondences/templates/correspondences/correspondence_detail.html
+++ b/apps/correspondences/templates/correspondences/correspondence_detail.html
@@ -1,29 +1,48 @@
+{% extends "core/base.html" %}
+{% load static %}
+
+{% block content %}
 <h1>{{ correspondence.name }}</h1>
+
 <p>
-  Owner: {{ correspondence.owner.email }} |
-  {% if correspondence.is_public %}public{% else %}private{% endif %}
-   <a href="{% url 'correspondences:upload' correspondence.id %}">Upload/Replace entries</a>
+  Owner :{{ correspondence.owner.username }} <br>
+  Email: {{ correspondence.owner.email }} <br>
+  {% if correspondence.is_public %}
+    (Public)
+  {% else %}
+    (Private)
+  {% endif %}
+  |
+  <a href="{% url 'correspondences:upload' correspondence.id %}"> 📤Upload / Replace entries</a>
+  <p>
+  <a href="{% url 'correspondences:list' %}">← Back to My correspondence Table</a>
+</p>
 </p>
 
-<table border="1" cellpadding="6">
+<table>
   <thead>
     <tr>
-      <th>Identifier</th>
-      <th>Display name</th>
+      <th>Identifiers</th>
+      <th>Display Name</th>
       <th>Type</th>
     </tr>
   </thead>
   <tbody>
     {% for e in entries %}
-      <tr>
-        <td>{{ e.identifier }}</td>
-        <td>{{ e.display_name }}</td>
-        <td>{{ e.entry_type }}</td>
-      </tr>
+    <tr>
+      <td>{{ e.identifier }}</td>
+      <td>{{ e.display_name }}</td>
+      <td>{{ e.entry_type }}</td>
+    </tr>
     {% empty %}
-      <tr><td colspan="3">No entries.</td></tr>
+    <tr>
+      <td colspan="3">No entries found.</td>
+    </tr>
     {% endfor %}
   </tbody>
 </table>
 
-<p><a href="{% url 'correspondences:list' %}">← Back to list</a></p>
+<p>
+  <a href="{% url 'correspondences:list' %}">← Back to My correspondence Table</a>
+</p>
+{% endblock %}
