--- a/apps/core/templates/core/admin_page.html
+++ b/apps/core/templates/core/admin_page.html
@@ -22,6 +22,19 @@
       <li><a href="{% url 'teams:teams' %}">Équipes</a></li>
       <li><a href="{% url 'simulations:simu' %}">Simulations</a></li>
     </ul>
+
+    <h2>Publications</h2>
+    <ul>
+      <li>
+        <a href="{% url 'publications:admin_requests_list' %}">
+          Demandes de publication
+          {% if pending_publication_count %}
+            ({{ pending_publication_count }})
+          {% endif %}
+        </a>
+      </li>
+    </ul>
+
   {% endif %}
 
   {% if user.is_superuser %}
